// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Registration should register delegate with keyboard 1`] = `<DocumentFragment />`;

exports[`Registration should register delegate without keyboard 1`] = `<DocumentFragment />`;

exports[`Registration should register second signature 1`] = `
<DocumentFragment>
  <div
    class="css-w3nefz"
  >
    <nav
      aria-labelledby="main menu"
      class="css-1ovuwx0"
    >
      <div
        class="relative flex h-21"
      >
        <div
          class="hidden w-12 sm:flex"
        >
          <button
            class="css-1v0i3m7"
          >
            <div
              class="mx-auto css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                chevron-left-small.svg
              </svg>
            </div>
          </button>
        </div>
        <div
          class="flex flex-1 items-center px-8"
        >
          <div
            class="my-auto flex items-center"
          >
            <button
              class="my-auto mr-4 flex h-11 w-11 cursor-pointer items-center justify-center rounded-xl bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
              data-testid="NavigationBarLogo--button"
              type="button"
            >
              <span
                class="relative"
              >
                <svg
                  height="28"
                >
                  arkvault-logo.svg
                </svg>
              </span>
            </button>
          </div>
          <ul
            class="mr-auto ml-4 hidden h-21 space-x-8 lg:flex"
            data-testid="NavigationBar__menu"
          >
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="mr-auto ml-2 flex content-center items-center lg:hidden"
            data-testid="NavigationBar__menu-toggle"
          >
            <div
              class="static sm:relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <button
                  class="cursor-pointer rounded p-2 focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
                  type="button"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg>
                      menu.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
          </div>
          <div
            class="mr-4 flex items-center space-x-2 sm:space-x-4"
          >
            <div>
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group css-1ietn6u"
                  >
                    <button
                      class="css-12xyeiw"
                      data-testid="NavigationBar__buttons--server-status"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="p-1 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            cloud.svg
                          </svg>
                        </div>
                        <div
                          class="absolute top-1 right-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="h-2 w-2 rounded-full bg-theme-success-700"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div>
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group css-1ietn6u"
                  >
                    <button
                      class="css-12xyeiw"
                      data-testid="NavigationBar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="p-1 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            bell.svg
                          </svg>
                        </div>
                        <div
                          class="absolute top-1 right-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="h-2 w-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="hidden items-center space-x-4 sm:flex"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="css-1ietn6u"
                >
                  <button
                    class="css-127bt7l"
                    data-testid="NavigationBar__buttons--receive"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          received.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="css-1ietn6u"
                >
                  <button
                    class="css-127bt7l"
                    data-testid="NavigationBar__buttons--send"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          sent.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
            </div>
          </div>
          <div
            class="my-auto mx-4 hidden items-center md:flex"
            data-testid="NavigationBar__balance"
          >
            <div
              class="-mt-3 flex flex-row items-center justify-center space-x-2 bg-theme-secondary-100 py-2.5 px-8 dark:bg-black md:m-0 md:flex-col md:items-start md:justify-start md:space-x-0 md:bg-transparent md:p-0 md:text-right md:dark:bg-transparent"
            >
              <div
                class="whitespace-nowrap text-theme-secondary-700 dark:text-theme-secondary-500 md:text-xs md:font-semibold md:text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="font-semibold text-theme-secondary-900 dark:text-theme-secondary-200 md:text-theme-secondary-text md:dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            class="static sm:relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <div
                class="relative cursor-pointer items-center justify-center rounded-full align-middle"
                data-testid="UserMenu"
              >
                <div
                  class="shrink-0 css-8d0u1i"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-1 flex-col"
    >
      <div
        class="flex-1 css-ycib48"
      >
        <div
          class="mx-auto px-8 md:px-10 lg:container"
        >
          <form
            class="mx-auto max-w-xl"
            data-testid="Registration__form"
          >
            <div>
              <div />
              <div
                data-testid="tab-pabel__active-panel"
              >
                <div
                  class="space-y-6"
                  data-testid="AuthenticationStep"
                >
                  <div
                    class="sm:mt-8"
                  >
                    <div
                      class="flex flex-col"
                    >
                      <span
                        class="css-3qwsx5"
                      >
                        Authenticate
                      </span>
                      <ul
                        class="css-xa5o6q"
                      >
                        <li
                          class="css-47028"
                        />
                        <li
                          class="css-47028"
                        />
                        <li
                          class="css-47028"
                        />
                        <li
                          class="css-47028"
                        />
                        <li
                          class="css-47028"
                        />
                        <li
                          class="css-3ldhk3"
                        />
                      </ul>
                    </div>
                    <div
                      class="flex flex-col justify-between sm:flex-row"
                    >
                      <div
                        class="flex items-end justify-between bg-theme-background mt-6 hidden sm:block"
                      >
                        <div
                          class="space-y-4"
                        >
                          <h1
                            class="mb-0 text-2xl"
                            data-testid="header__title"
                          >
                            Authenticate
                          </h1>
                          <div
                            class="flex items-center text-theme-secondary-text"
                            data-testid="header__subtitle"
                          >
                            Enter your mnemonic passphrase to authenticate the transaction.
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <fieldset
                    class="flex min-w-0 flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="mnemonic"
                    >
                      Mnemonic
                    </label>
                    <div
                      class="css-1psxlcd"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1nupw50"
                          data-testid="AuthenticationStep__mnemonic"
                          name="mnemonic"
                          type="password"
                          value=""
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                        data-testid="Input__addon-end"
                      >
                        <div
                          class=""
                        >
                          <button
                            class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
                            data-ring-focus-margin="-m-1"
                            data-testid="InputPassword__toggle"
                            type="button"
                          >
                            <div
                              class="css-1i4b0eq"
                              height="20"
                              width="20"
                            >
                              <svg>
                                eye.svg
                              </svg>
                            </div>
                          </button>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                </div>
              </div>
              <div
                class="css-2wyvkd"
              >
                <button
                  class="css-1jhy6v9"
                  data-testid="StepNavigation__back-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Back
                  </div>
                </button>
                <button
                  class="css-1bx0hyc"
                  data-testid="StepNavigation__send-button"
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <span>
                      Send
                    </span>
                    <div
                      class="css-v0ob3f"
                      height="16"
                      width="16"
                    >
                      <svg>
                        double-arrow-right.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Registration should show error step and go back 1`] = `
<DocumentFragment>
  <div
    class="css-w3nefz"
  >
    <div
      class="css-tbczne"
      data-testid="NavigationBarMobile"
    >
      <div
        class="border-t border-theme-secondary-300 dark:border-theme-secondary-900"
        data-testid="NavigationBar__buttons-separator"
      />
      <div
        class="flex h-14 items-center justify-center space-x-4"
      >
        <button
          class="cursor-not-allowed text-theme-secondary-500 css-127bt7l"
          data-testid="NavigationBar__buttons__mobile--receive"
          disabled=""
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                received.svg
              </svg>
            </div>
          </div>
        </button>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
          type="vertical"
        />
        <button
          class="text-theme-secondary-700 dark:text-theme-secondary-600 css-12xyeiw"
          data-testid="NavigationBar__buttons__mobile--home"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                dashboard.svg
              </svg>
            </div>
          </div>
        </button>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
          type="vertical"
        />
        <button
          class="cursor-not-allowed text-theme-secondary-500 css-127bt7l"
          data-testid="NavigationBar__buttons__mobile--send"
          disabled=""
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                sent.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <nav
      aria-labelledby="main menu"
      class="css-1ovuwx0"
    >
      <div
        class="relative flex h-21"
      >
        <div
          class="hidden w-12 sm:flex"
        >
          <button
            class="css-1v0i3m7"
          >
            <div
              class="mx-auto css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                chevron-left-small.svg
              </svg>
            </div>
          </button>
        </div>
        <div
          class="flex flex-1 items-center px-8"
        >
          <div
            class="my-auto flex items-center"
          >
            <button
              class="my-auto mr-4 flex h-11 w-11 cursor-pointer items-center justify-center rounded-xl bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
              data-testid="NavigationBarLogo--button"
              type="button"
            >
              <span
                class="relative"
              >
                <svg
                  height="28"
                >
                  arkvault-logo.svg
                </svg>
              </span>
            </button>
          </div>
          <ul
            class="mr-auto ml-4 hidden h-21 space-x-8 lg:flex"
            data-testid="NavigationBar__menu"
          >
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="mr-auto ml-2 flex content-center items-center lg:hidden"
            data-testid="NavigationBar__menu-toggle"
          >
            <div
              class="static sm:relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <button
                  class="cursor-pointer rounded p-2 focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
                  type="button"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg>
                      menu.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
          </div>
          <div
            class="mr-4 flex items-center space-x-2 sm:space-x-4"
          >
            <div>
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group css-1ietn6u"
                  >
                    <button
                      class="css-12xyeiw"
                      data-testid="NavigationBar__buttons--server-status"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="p-1 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            cloud.svg
                          </svg>
                        </div>
                        <div
                          class="absolute top-1 right-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="h-2 w-2 rounded-full bg-theme-success-700"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div>
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group css-1ietn6u"
                  >
                    <button
                      class="css-12xyeiw"
                      data-testid="NavigationBar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="p-1 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            bell.svg
                          </svg>
                        </div>
                        <div
                          class="absolute top-1 right-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="h-2 w-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="hidden items-center space-x-4 sm:flex"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="css-1ietn6u"
                >
                  <button
                    class="css-127bt7l"
                    data-testid="NavigationBar__buttons--receive"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          received.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="css-1ietn6u"
                >
                  <button
                    class="css-127bt7l"
                    data-testid="NavigationBar__buttons--send"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          sent.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
            </div>
          </div>
          <div
            class="my-auto mx-4 hidden items-center md:flex"
            data-testid="NavigationBar__balance"
          >
            <div
              class="-mt-3 flex flex-row items-center justify-center space-x-2 bg-theme-secondary-100 py-2.5 px-8 dark:bg-black md:m-0 md:flex-col md:items-start md:justify-start md:space-x-0 md:bg-transparent md:p-0 md:text-right md:dark:bg-transparent"
            >
              <div
                class="whitespace-nowrap text-theme-secondary-700 dark:text-theme-secondary-500 md:text-xs md:font-semibold md:text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="font-semibold text-theme-secondary-900 dark:text-theme-secondary-200 md:text-theme-secondary-text md:dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            class="static sm:relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <div
                class="relative cursor-pointer items-center justify-center rounded-full align-middle"
                data-testid="UserMenu"
              >
                <div
                  class="shrink-0 css-8d0u1i"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-1 flex-col"
    >
      <div
        class="flex-1 css-ycib48"
      >
        <div
          class="mx-auto px-8 md:px-10 lg:container"
        >
          <form
            class="mx-auto max-w-xl"
            data-testid="Registration__form"
          >
            <div>
              <div
                data-testid="tab-pabel__active-panel"
              >
                <div
                  data-testid="ErrorStep"
                >
                  <div
                    class="space-y-8"
                  >
                    <div
                      class="sm:mt-8"
                    >
                      <div
                        class="flex flex-col"
                      >
                        <span
                          class="css-3qwsx5"
                        >
                          Transaction Error
                        </span>
                        <ul
                          class="css-xa5o6q"
                        >
                          <li
                            class="css-47028"
                          />
                          <li
                            class="css-47028"
                          />
                          <li
                            class="css-47028"
                          />
                          <li
                            class="css-47028"
                          />
                        </ul>
                      </div>
                      <div
                        class="flex flex-col justify-between sm:flex-row"
                      >
                        <div
                          class="flex items-end justify-between bg-theme-background mt-6 hidden sm:block"
                        >
                          <div
                            class="space-y-4"
                          >
                            <h1
                              class="mb-0 text-2xl"
                              data-testid="header__title"
                            >
                              Transaction Error
                            </h1>
                          </div>
                        </div>
                      </div>
                    </div>
                    <svg
                      class="hidden w-full md:block"
                    >
                      transaction-error-banner-light-green.svg
                    </svg>
                    <div
                      class="space-y-6"
                    >
                      <p
                        class="hidden text-theme-secondary-text md:block"
                      >
                        An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
                      </p>
                      <div
                        class="flex flex-col overflow-hidden rounded-xl md:hidden"
                      >
                        <div
                          class="css-ic0qlc"
                        >
                          <div
                            class="css-v0ob3f"
                            height="16"
                            width="16"
                          >
                            <svg>
                              circle-cross.svg
                            </svg>
                          </div>
                          <span>
                            Error
                          </span>
                        </div>
                        <div
                          class="css-6o9bco"
                        >
                          An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
                        </div>
                      </div>
                      <div
                        class="relative"
                      >
                        <div
                          class="pointer-events-none absolute bottom-4 right-3 z-10 hidden h-0 w-0 -rotate-45 border-x-8 border-t-8 border-x-transparent border-x-transparent border-t-theme-secondary-400 dark:border-t-theme-secondary-700 md:block"
                        />
                        <div
                          class="py-4 css-qner8f"
                          disabled=""
                        >
                          <div
                            class="relative flex h-full flex-1"
                          >
                            <textarea
                              autocomplete="off"
                              class="no-ligatures w-full border-none resize-none min-h-[8rem] md:min-h-auto md:resize-y resize-none text-theme-secondary-text css-1nupw50"
                              data-testid="ErrorStep__errorMessage"
                              disabled=""
                              style="height: 4px;"
                              type="text"
                            >
                              {"message":"broadcast error","type":"Error"}
                            </textarea>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-2wyvkd"
                  >
                    <div
                      class="mr-auto"
                    >
                      <div
                        class="relative"
                      >
                        <button
                          class="css-1jhy6v9"
                          data-testid="clipboard-button__wrapper"
                          type="button"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            <div
                              class="css-1i4b0eq"
                              height="20"
                              width="20"
                            >
                              <svg>
                                copy.svg
                              </svg>
                            </div>
                            <span
                              class="hidden sm:block"
                            >
                              Copy Error
                            </span>
                          </div>
                        </button>
                      </div>
                    </div>
                    <button
                      class="css-1jhy6v9"
                      data-testid="ErrorStep__wallet-button"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="whitespace-nowrap"
                        >
                          Back to Wallet
                        </div>
                      </div>
                    </button>
                    <button
                      class="css-1bx0hyc"
                      data-testid="ErrorStep__repeat-button"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="whitespace-nowrap"
                        >
                          Retry
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div />
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Registration should show mnemonic error 1`] = `
<div>
  <div
    class="css-w3nefz"
  >
    <nav
      aria-labelledby="main menu"
      class="css-1ovuwx0"
    >
      <div
        class="relative flex h-21"
      >
        <div
          class="hidden w-12 sm:flex"
        >
          <button
            class="css-1v0i3m7"
          >
            <div
              class="mx-auto css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                chevron-left-small.svg
              </svg>
            </div>
          </button>
        </div>
        <div
          class="flex flex-1 items-center px-8"
        >
          <div
            class="my-auto flex items-center"
          >
            <button
              class="my-auto mr-4 flex h-11 w-11 cursor-pointer items-center justify-center rounded-xl bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
              data-testid="NavigationBarLogo--button"
              type="button"
            >
              <span
                class="relative"
              >
                <svg
                  height="28"
                >
                  arkvault-logo.svg
                </svg>
              </span>
            </button>
          </div>
          <ul
            class="mr-auto ml-4 hidden h-21 space-x-8 lg:flex"
            data-testid="NavigationBar__menu"
          >
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="mr-auto ml-2 flex content-center items-center lg:hidden"
            data-testid="NavigationBar__menu-toggle"
          >
            <div
              class="static sm:relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <button
                  class="cursor-pointer rounded p-2 focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
                  type="button"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg>
                      menu.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
          </div>
          <div
            class="mr-4 flex items-center space-x-2 sm:space-x-4"
          >
            <div>
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group css-1ietn6u"
                  >
                    <button
                      class="css-12xyeiw"
                      data-testid="NavigationBar__buttons--server-status"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="p-1 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            cloud.svg
                          </svg>
                        </div>
                        <div
                          class="absolute top-1 right-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="h-2 w-2 rounded-full bg-theme-success-700"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div>
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group css-1ietn6u"
                  >
                    <button
                      class="css-12xyeiw"
                      data-testid="NavigationBar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="p-1 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            bell.svg
                          </svg>
                        </div>
                        <div
                          class="absolute top-1 right-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="h-2 w-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="hidden items-center space-x-4 sm:flex"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="css-1ietn6u"
                >
                  <button
                    class="css-127bt7l"
                    data-testid="NavigationBar__buttons--receive"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          received.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="css-1ietn6u"
                >
                  <button
                    class="css-127bt7l"
                    data-testid="NavigationBar__buttons--send"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          sent.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
            </div>
          </div>
          <div
            class="my-auto mx-4 hidden items-center md:flex"
            data-testid="NavigationBar__balance"
          >
            <div
              class="-mt-3 flex flex-row items-center justify-center space-x-2 bg-theme-secondary-100 py-2.5 px-8 dark:bg-black md:m-0 md:flex-col md:items-start md:justify-start md:space-x-0 md:bg-transparent md:p-0 md:text-right md:dark:bg-transparent"
            >
              <div
                class="whitespace-nowrap text-theme-secondary-700 dark:text-theme-secondary-500 md:text-xs md:font-semibold md:text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="font-semibold text-theme-secondary-900 dark:text-theme-secondary-200 md:text-theme-secondary-text md:dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            class="static sm:relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <div
                class="relative cursor-pointer items-center justify-center rounded-full align-middle"
                data-testid="UserMenu"
              >
                <div
                  class="shrink-0 css-8d0u1i"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-1 flex-col"
    >
      <div
        class="flex-1 css-ycib48"
      >
        <div
          class="mx-auto px-8 md:px-10 lg:container"
        >
          <form
            class="mx-auto max-w-xl"
            data-testid="Registration__form"
          >
            <div>
              <div />
              <div
                data-testid="tab-pabel__active-panel"
              >
                <div
                  class="space-y-6"
                  data-testid="AuthenticationStep"
                >
                  <div
                    class="sm:mt-8"
                  >
                    <div
                      class="flex flex-col"
                    >
                      <span
                        class="css-3qwsx5"
                      >
                        Authenticate
                      </span>
                      <ul
                        class="css-xa5o6q"
                      >
                        <li
                          class="css-47028"
                        />
                        <li
                          class="css-47028"
                        />
                        <li
                          class="css-47028"
                        />
                        <li
                          class="css-3ldhk3"
                        />
                      </ul>
                    </div>
                    <div
                      class="flex flex-col justify-between sm:flex-row"
                    >
                      <div
                        class="flex items-end justify-between bg-theme-background mt-6 hidden sm:block"
                      >
                        <div
                          class="space-y-4"
                        >
                          <h1
                            class="mb-0 text-2xl"
                            data-testid="header__title"
                          >
                            Authenticate
                          </h1>
                          <div
                            class="flex items-center text-theme-secondary-text"
                            data-testid="header__subtitle"
                          >
                            Enter your mnemonic passphrase to authenticate the transaction.
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <fieldset
                    class="flex min-w-0 flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="mnemonic"
                    >
                      Mnemonic
                    </label>
                    <div
                      class="css-1psxlcd"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1nupw50"
                          data-testid="AuthenticationStep__mnemonic"
                          name="mnemonic"
                          type="password"
                          value=""
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                        data-testid="Input__addon-end"
                      >
                        <div
                          class=""
                        >
                          <button
                            class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
                            data-ring-focus-margin="-m-1"
                            data-testid="InputPassword__toggle"
                            type="button"
                          >
                            <div
                              class="css-1i4b0eq"
                              height="20"
                              width="20"
                            >
                              <svg>
                                eye.svg
                              </svg>
                            </div>
                          </button>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="flex min-w-0 flex-col css-5kz4tk"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="secondMnemonic"
                    >
                      2nd Mnemonic
                    </label>
                    <div
                      class="css-px3dod"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          aria-invalid="true"
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1nupw50"
                          data-testid="AuthenticationStep__second-mnemonic"
                          name="secondMnemonic"
                          type="password"
                          value=""
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                        data-testid="Input__addon-end"
                      >
                        <span
                          data-errortext="This mnemonic does not correspond to your wallet"
                          data-testid="Input__error"
                        >
                          <div
                            class="text-theme-danger-500 css-1i4b0eq"
                            height="20"
                            width="20"
                          >
                            <svg>
                              circle-exclamation-mark.svg
                            </svg>
                          </div>
                        </span>
                        <div
                          class="pl-3"
                        >
                          <button
                            class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
                            data-ring-focus-margin="-m-1"
                            data-testid="InputPassword__toggle"
                            type="button"
                          >
                            <div
                              class="css-1i4b0eq"
                              height="20"
                              width="20"
                            >
                              <svg>
                                eye.svg
                              </svg>
                            </div>
                          </button>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                </div>
              </div>
              <div
                class="css-2wyvkd"
              >
                <button
                  class="css-1jhy6v9"
                  data-testid="StepNavigation__back-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Back
                  </div>
                </button>
                <button
                  class="css-1yqe28v"
                  data-testid="StepNavigation__send-button"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <span>
                      Send
                    </span>
                    <div
                      class="css-v0ob3f"
                      height="16"
                      width="16"
                    >
                      <svg>
                        double-arrow-right.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
